--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,6 +12,31 @@
   src: url('../fonts/Montserrat-Italic.ttf');
 }
 
+::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+/* Style for the scroll bar track */
+::-webkit-scrollbar-track {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+/* Style for the scroll bar thumb */
+::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.4);
+  border-radius: 5px;
+}
+
+/* Style for the scroll bar thumb when hovering */
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(255, 255, 255, 0.6);
+}
+
+/* Style for the scroll bar thumb when active */
+::-webkit-scrollbar-thumb:active {
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
 body {
   box-sizing: border-box;
   margin: 0;
@@ -21,6 +46,11 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family:
+    source-code-pro,
+    Menlo,
+    Monaco,
+    Consolas,
+    'Courier New',
     monospace;
 }
